--- a/report.tex
+++ b/report.tex
@@ -129,9 +129,9 @@ brazil
 % --------------------------------------------------------------------------
 % Informações de dados para CAPA e FOLHA DE ROSTO                           
 \prodtecnica{001 / 2020}
-\titulo{Manipulador Robótico JeRoTIMON}
+\titulo{Robô com Navegação Autônoma, detecção visual e manipulador}
 % \tiporelatorio{} 
-\nomeprojeto{Manipuladores Inteligentes}
+\nomeprojeto{Robô Autônomo}
 \outrossubtitulos{~} % opcional
 \autores{
 	Anderson Queiroz do Vale \\
@@ -190,11 +190,11 @@ brazil
 		\normalsize
 		\justify
 		\normalfont
-		O projeto de Manipuladores - Desafio 2.2, também conhecido como \textbf{JeRoTIMON Manipulator} configura-se: sob o Programa de Formação de Novos Talentos do \ac{CCRoSA} do Serviço Nacional de Aprendizagem Industrial, Departamento Regional da Bahia - Senai/DR/BA, sendo este o principal fomentador do programa.  O presente trabalho tem como impulsionador principal a capacitação de novos pesquisadores preparados para solucionar os mais diversos problemas relacionados a robótica e sistemas autônomos.
+		O projeto de Robô Autônomo- Desafio 3.0, também conhecido como \textbf{Saci} configura-se: sob o Programa de Formação de Novos Talentos do \ac{CCRoSA} do Serviço Nacional de Aprendizagem Industrial, Departamento Regional da Bahia - Senai/DR/BA, sendo este o principal fomentador do programa.  O presente trabalho tem como impulsionador principal a capacitação de novos pesquisadores preparados para solucionar os mais diversos problemas relacionados a robótica e sistemas autônomos.
 
-		O projeto foi considerado como início técnico no dia 27 de Fevereiro de 2020, ocorrendo um hiato de desenvolvimento entre o período de 17 de março de 2020 a 07 de setembro de 2020 devido às medidas de isolamento social decorrentes da pandemia do novo corona vírus, havendo seu retorno no dia 08 de setembro de 2020. 
+		O projeto foi considerado como início técnico no dia 04 de Novembro de 2020.  
 		
-		O prazo de execução planejado foi de 50 dias.
+		O prazo de execução planejado foi de 30 dias.
 	\end{flushleft}
 	\clearpage
 %------------------------------------------------------------------
@@ -204,8 +204,7 @@ brazil
 		\normalsize
 		\justify
 		\normalfont
-		JeRoTIMON é um manipulador projetado, simulado e construído  com o intuito de atender às demandas relacionadas ao reconhecimento de marcadores visuais e acionamento de interruptores, chaves ou botões. Posteriormente, este mesmo manipulador robótico será integrado ao robô \textit{Warthog}, desenvolvido pela \textit{Clearpath Robotics},  com  o  propósito  de  realizar  a  atividade  de  investigação  em  ambiente  externo, desta vez participando de uma busca e desarme de bombas sem potencial destrutivo. O pacote de simulação do  manipulador foi  construído  através  do  software  \textit{Gazebo} aliado ao \textit{MoveIt} e a ferramenta de visualização \textit{Rviz}, possibilitando assim que as atividades  realizadas  no  mundo  real  tenham  sido previamente testadas em ambiente simulado onde é possível analisar os movimentos e limitações do manipulador. 
-
+		O Saci integra o robô da \textit{Clearpath Robotics Warthog} equipado com sensores (câmeras, LiDAR e GPS) e o manipulador robótico JeRoTIMON, com o propósito de transformá-lo em um robô autônomo. Este robô foi construído com o intuito de que o mesmo tivesse navegação autônoma para realizar investigação em ambiente externo e construir um mapa deste, detectasse a bomba escondida nesse ambiente, e realizasse o desarme da bomba através do manipulador. Para a simulação foram utilizados o software  \textit{Gazebo} e a ferramenta de visualização \textit{Rviz}, e para o manipulador foi utilizado \textit{MoveIt}. Este robô também possui sua versão real onde foi possível realizar testes e verificar seu desempenho em campo.		
 	\end{flushleft}
 	\vspace*{1cm}
 	\newpage
@@ -215,7 +214,7 @@ brazil
 		\normalsize
 		\justify
 		\normalfont
-		JeRoTIMON is a manipulator designed, simulated and built in order to meet demands related to the recognition of visual markers and activation of interrupters, switches or buttons.  Posteriorly, this manipulator robot arm will be attached in \textit{Warthog}, robot designed by \textit{Clearpath Robotics}, with the purpose of carrying out the research activity in an external environment, this time, integrating a searching and defusing non-destructive bombs.  The manipulator simulation package was built using software \textit{Gazebo}, allied to \textit{Moveit} and \textit{Rviz} visual tool, allowing that activities practiced in the real world have been previously tested in a computer environment where it is possible to analyze manipulator's movements and limitations. 
+		PUT IN ENGLISH
 	\end{flushleft}
 	\clearpage
 % --------------------------------------------------------------------------
